--- a/package.json
+++ b/package.json
@@ -3,18 +3,30 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "dev": "next dev",
+        "dev": "NODE_ENV='development' node --inspect=0.0.0.0:9229 server.js",
         "build": "next build",
-        "start": "next start",
+        "start": "node server.js",
         "lint": "next lint"
     },
     "dependencies": {
+        "@egomobile/http-server": "0.67.0",
+        "@emotion/react": "11.11.4",
+        "@emotion/styled": "11.11.0",
+        "@fontsource/roboto": "5.0.12",
+        "@mui/icons-material": "5.15.12",
+        "@mui/material": "5.15.12",
+        "axios": "1.6.7",
+        "clsx": "2.1.0",
+        "commonmark": "0.31.0",
+        "dayjs": "1.11.10",
+        "formdata-node": "6.0.3",
         "next": "14.1.3",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "sass": "1.71.1"
     },
     "devDependencies": {
+        "@types/commonmark": "0.27.9",
         "@types/node": "18.19.23",
         "@types/react": "18.2.65",
         "@types/react-dom": "18.2.21",
